faster_rcnn_resnet101_voc07在本地的训练及测试成功

--- a/object_detection/my_model/faster_rcnn_resnet101_voc07.config
+++ b/object_detection/my_model/faster_rcnn_resnet101_voc07.config
@@ -107,8 +107,8 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "F:\\model\\resnet_v1\\resnet_v1_101.ckpt"
-  # from_detection_checkpoint: true
+  fine_tune_checkpoint: "F:\\model\\object_detection\\faster_rcnn_resnet101_coco_11_06_2017\\model.ckpt"
+  from_detection_checkpoint: true
   num_steps: 800000
   data_augmentation_options {
     random_horizontal_flip {
@@ -118,7 +118,7 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "./pascal_train.record"
+    input_path: "F:\\tensorflow\\tfrecord\\pascal_train.record"
   }
   label_map_path: "data/pascal_label_map.pbtxt"
 }
@@ -129,7 +129,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "./pascal_val.record"
+    input_path: "F:\\tensorflow\\tfrecord\\pascal_val.record"
   }
   label_map_path: "data/pascal_label_map.pbtxt"
 }
