--- a/object_detection/my_model/ssd_inception_v2_head.config
+++ b/object_detection/my_model/ssd_inception_v2_head.config
@@ -134,7 +134,7 @@ model {
 }
 
 train_config: {
-  batch_size: 24
+  batch_size: 8
   optimizer {
     rms_prop_optimizer: {
       learning_rate: {
@@ -149,8 +149,8 @@ train_config: {
       epsilon: 1.0
     }
   }
-  # fine_tune_checkpoint: "F:\\model\\ssd_inception_v2\\ssd_inception_v2_coco.ckpt"
-  from_detection_checkpoint: False
+  fine_tune_checkpoint: "F:\\model\\object_detection\\ssd_inception_v2_coco_11_06_2017\\model.ckpt"
+  from_detection_checkpoint: true
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -163,7 +163,7 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "./head_train.record"
+    input_path: "F:\\tensorflow\\tfrecord\\head_train.record"
   }
   label_map_path: "data/head_map.pbtxt"
 }
@@ -174,7 +174,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "./head_val.record"
+    input_path: "F:\\tensorflow\\tfrecord\\head_val.record"
   }
   label_map_path: "data/head_map.pbtxt"
 }
